--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.89.0",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
     "react-tooltip": "^4.2.21",
+    "zod": "^4.3.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
