--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prod": "vercel --prod",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
     "react-tooltip": "^4.2.21",
+    "vercel": "^50.3.0",
     "zod": "^4.3.5",
     "zustand": "^4.5.0"
   },
@@ -29,7 +31,7 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.23",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -38,6 +40,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.6.3",
-    "vite": "^7.3.1"
+    "vite": "^5.4.21"
   }
 }
